fix: executor report url if provided should have greater priority than base server url